--- a/CSS Samples/AdvanceCSS_And_SASS/NatoursProject/sass/layout/_grid.scss
+++ b/CSS Samples/AdvanceCSS_And_SASS/NatoursProject/sass/layout/_grid.scss
@@ -6,12 +6,13 @@
         margin-bottom: $gutter-vertical;
 
         @include respond(tab-port) {
-            margin-bottom: $gutter-vertical;
+            margin-bottom: $gutter-vertical-small;
         }
-        @include respond(tab-port) {
-            margin-right: 0;
-            margin-bottom: $gutter-vertical;
-        }
+    }
+
+    @include respond(tab-port) {
+        max-width: 50rem;
+        padding: 0 3rem;
     }
 
     @include clearfix;
